Fix: fix getFirst() dependency - getFirst() is introduced in Java 21 which some members have not updated yet.